deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: precily-api-service
spec:
  type: NodePort
  selector:
    app: precily-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
      nodePort: 31000

---
# apiVersion: v1
# kind: Service
# metadata:
#   name: precily-api-loadbalancer
# spec:
#   selector:
#     app: precily-api
#   ports:
#     - port: 4000
#       targetPort: 4000
#   type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: precily-ingress
spec:
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Exact
        backend:
          service:
            name: precily-api-service
            port:
              number: 4000
      - path: "/read_ocr" # Inorder access api using postman 
        pathType: Exact
        backend:
          service:
            name: precily-api-service
            port:
              number: 4000
      - path: "/swagger" # Inorder access api using browser 
        pathType: Exact
        backend:
          service:
            name: precily-api-service
            port:
              number: 4000
